{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 23,
  "lineage": "c79a46d4-6df2-7dc7-871b-a46d367390a6",
  "resources": [
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_1",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:468457790385:subnet/subnet-820337f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-820337f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468457790385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c649bea1"
          }
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_2",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:468457790385:subnet/subnet-2a1b094e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-2a1b094e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "468457790385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c649bea1"
          }
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:468457790385:vpc/vpc-c649bea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-168a5871",
            "default_route_table_id": "rtb-c8a519af",
            "default_security_group_id": "sg-5e9ceb27",
            "dhcp_options_id": "dopt-3cc8b858",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-c649bea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-c8a519af",
            "owner_id": "468457790385"
          }
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadBalancer",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:468457790385:loadbalancer/app/tf-lb-20220516014106845900000003/51e2370dbaa255f0",
            "arn_suffix": "app/tf-lb-20220516014106845900000003/51e2370dbaa255f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220516014106845900000003-1690197368.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:468457790385:loadbalancer/app/tf-lb-20220516014106845900000003/51e2370dbaa255f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220516014106845900000003",
            "security_groups": [
              "sg-5e9ceb27"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2a1b094e"
              },
              {
                "subnet_id": "subnet-820337f4"
              }
            ],
            "subnets": [
              "subnet-2a1b094e",
              "subnet-820337f4"
            ],
            "vpc_id": "vpc-c649bea1",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.aws-prd.aws_default_subnet.subnet_1",
            "module.aws-prd.aws_default_subnet.subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "entradaLoadBalancer",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:468457790385:listener/app/tf-lb-20220516014106845900000003/51e2370dbaa255f0/03ddb1b4065dfa57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:468457790385:targetgroup/maquinasAlvo/b93e34a8162ebead",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:468457790385:listener/app/tf-lb-20220516014106845900000003/51e2370dbaa255f0/03ddb1b4065dfa57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:468457790385:loadbalancer/app/tf-lb-20220516014106845900000003/51e2370dbaa255f0",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-prd.aws_default_subnet.subnet_1",
            "module.aws-prd.aws_default_subnet.subnet_2",
            "module.aws-prd.aws_default_vpc.default",
            "module.aws-prd.aws_lb.loadBalancer",
            "module.aws-prd.aws_lb_target_group.alvoLoadBalancer"
          ]
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alvoLoadBalancer",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:468457790385:targetgroup/maquinasAlvo/b93e34a8162ebead",
            "arn_suffix": "targetgroup/maquinasAlvo/b93e34a8162ebead",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:468457790385:targetgroup/maquinasAlvo/b93e34a8162ebead",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "maquinasAlvo",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-c649bea1"
          },
          "dependencies": [
            "module.aws-prd.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws-prd",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_geral",
      "provider": "module.aws-prd.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:468457790385:security-group/sg-05f792e2e618cb6b7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f792e2e618cb6b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "production",
            "name_prefix": "",
            "owner_id": "468457790385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acesso_geral"
            },
            "tags_all": {
              "Name": "acesso_geral"
            },
            "timeouts": null,
            "vpc_id": "vpc-c649bea1"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}